@@ -99,7 +99,7 @@ public final class StandardJavaEngine extends GenericAsyncEngine {
             if (Modifier.isStatic(m.getModifiers())) {
                 result = m.invoke(null, dctx, context);
             } else {
-                result = m.invoke(c.newInstance(), dctx, context);
+                result = m.invoke(c.getDeclaredConstructor().newInstance(), dctx, context);
             }
         } catch (ClassNotFoundException cnfe) {
             throw new GenericServiceException("Cannot find service [" + modelService.name + "] location class", cnfe);
